// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/Tags/Tag as badge 1`] = `
<span
  className="euiBadge euiBadge--iconLeft"
  style={
    Object {
      "backgroundColor": "#666666",
      "color": "#fff",
    }
  }
>
  <span
    className="euiBadge__content"
  >
    <span
      className="euiBadge__text"
    >
      tag
    </span>
  </span>
</span>
`;

exports[`Storyshots components/Tags/Tag as badge with color 1`] = `
<span
  className="euiBadge euiBadge--iconLeft"
  style={
    Object {
      "backgroundColor": "#327b53",
      "color": "#fff",
    }
  }
>
  <span
    className="euiBadge__content"
  >
    <span
      className="euiBadge__text"
    >
      tag
    </span>
  </span>
</span>
`;

exports[`Storyshots components/Tags/Tag as health 1`] = `
<div
  className="euiHealth euiHealth--textSizeS"
>
  <div
    className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <span
        color="#666666"
        data-euiicon-type="dot"
      >
        
      </span>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      tag
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Tags/Tag as health with color 1`] = `
<div
  className="euiHealth euiHealth--textSizeS"
>
  <div
    className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <span
        color="#9b3067"
        data-euiicon-type="dot"
      >
        
      </span>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      tag
    </div>
  </div>
</div>
`;
